<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ss"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/space_station_icon"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp"
       app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space_stations"
        app:layout_constraintTop_toBottomOf="@id/ss"
        app:layout_constraintStart_toStartOf="@id/ss"
        app:layout_constraintEnd_toEndOf="@id/ss"
        tools:ignore="MissingConstraints,SmallSp"
      />

    <ImageView
        android:id="@+id/flight"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="76dp"
        android:src="@drawable/rocket_icon"
        app:layout_constraintStart_toEndOf="@id/ss"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flights"
        app:layout_constraintTop_toBottomOf="@id/flight"
        app:layout_constraintStart_toStartOf="@id/flight"
        app:layout_constraintEnd_toEndOf="@id/flight"
        tools:ignore="MissingConstraints,SmallSp"
        />

    <ImageView
        android:id="@+id/Rovers"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:src="@drawable/rover_icon"
        app:layout_constraintStart_toEndOf="@id/flight"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rovers"
        app:layout_constraintEnd_toEndOf="@id/Rovers"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@id/Rovers"
        app:layout_constraintTop_toBottomOf="@id/Rovers"
        tools:ignore="MissingConstraints,SmallSp" />

    <TextView
        android:id="@+id/DCA"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="#00FF00"
        android:text="@string/dca"
        android:gravity="center"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="139dp" />

    <TextView
        android:id="@+id/MARS"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="#00FF00"
        android:gravity="center"
        android:text="@string/mars"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="139dp" />

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/double_arrows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="150dp" />

    <Switch
        android:id="@+id/switch_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background=" #A52A2A"
        android:text="@string/one_way"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="247dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background=" #A52A2A"
        android:gravity="center"
        android:text="@string/_1_traveller"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/switch_example"
        app:layout_constraintTop_toBottomOf="@+id/switch_example" />
    <ImageView
        android:id="@+id/galaxy"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/galaxy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/rocket_icon"
        app:layout_constraintEnd_toStartOf="@+id/galaxy"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DEPART"
        android:gravity="center"
        android:background="#00FF00"
        android:textColor="@color/white"
       app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>