<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#00FFAA"
        android:gravity="center_vertical"
        android:text="@string/constraintlayouttest1"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
      />
    <EditText
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:hint="@string/input"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@id/Title"
        />
    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#A52A2A"
        android:textSize="20sp"
        android:gravity="center_vertical|right"
        android:hint="@string/_0_0"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/display"
         />
    <TextView
        android:id="@+id/blank"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/number"
        />
    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/blank"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:layout_constraintTop_toBottomOf="@id/blank"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button7"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        app:layout_constraintTop_toBottomOf="@id/blank"
        app:layout_constraintEnd_toStartOf="@id/j"
        app:layout_constraintStart_toEndOf="@id/button8"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/j"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/blank"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        app:layout_constraintTop_toBottomOf="@id/button8"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button4"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="6"
        app:layout_constraintTop_toBottomOf="@id/button9"
        app:layout_constraintEnd_toStartOf="@id/c"
        app:layout_constraintStart_toEndOf="@id/button5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/j"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        app:layout_constraintTop_toBottomOf="@id/button5"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button1"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        app:layout_constraintTop_toBottomOf="@id/button6"
        app:layout_constraintEnd_toStartOf="@id/k"
        app:layout_constraintStart_toEndOf="@id/button2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/k"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/c"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="."
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintEnd_toStartOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintEnd_toStartOf="@id/p"
        app:layout_constraintStart_toEndOf="@id/d"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="="
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:layout_constraintEnd_toStartOf="@id/a"
        app:layout_constraintStart_toEndOf="@id/button0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/p"
        app:layout_constraintTop_toBottomOf="@id/k"
        tools:ignore="DuplicateIds,MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>
